# ThreeBodySolution

./: .gitattributes  LICENSE.txt  PeerReviewQ&A.tex  RCSE_Q.E.tex  README.md  main.tex  pyproject.toml  setup.py
tests/: test_basic.py
threebodysolution/: __init__.py  classifier.py
threebodysolution.egg-info/: SOURCES.txt
